--- a/stack.yaml
+++ b/stack.yaml
@@ -41,7 +41,8 @@ packages:
 extra-deps:
 - glib-0.13.8.2@sha256:f44b829e741b3c3244d523f60b058701dfc067ff64c2ba61d43be4cccfc2663d,3156
 - cairo-0.13.8.2@sha256:ef1709c3c4d2c6d68a9a51d9f220dccc0745f6468d2d0868c15a7ecdf8f325a1,4078
-- pango-0.13.8.2@sha256:d4057ebddade4cde3e25d7755b5e030e7a7e56fe7365afd37916a7bba46d3fd9,3917  
+- pango-0.13.8.2@sha256:d4057ebddade4cde3e25d7755b5e030e7a7e56fe7365afd37916a7bba46d3fd9,3917
+- netlink-1.1.1.0@sha256:d83424b5ba9921191449e4b1f53c7cba7f4375f2c55a9b737c77e982e1f40d00,3689
 # - acme-missiles-0.3
 # - git: https://github.com/commercialhaskell/stack.git
 #   commit: e7b331f14bcffb8367cd58fbfc8b40ec7642100a
@@ -49,7 +50,19 @@ extra-deps:
 # extra-deps: []
 
 # Override default flag values for local packages and extra-deps
-# flags: {}
+flags:
+  xmobar:
+    # with_xrender is new flag >0.44.2
+    # but we are currently using 0.44.2 so we have with_xft
+    #with_xrender: true
+    #all_extensions: true
+    with_alsa: false
+    with_dbus: true
+    with_threaded: true
+    with_xft: true
+    with_xpm: true
+    with_weather: true
+    with_datezone: true
 
 # Extra package databases containing global packages
 # extra-package-dbs: []
