OSX install makefile

--- a/package.yaml
+++ b/package.yaml
@@ -1,6 +1,6 @@
 name:                xmonad-exe
 version:             0.1.0.0
-github:              "montycarlo/xmonad"
+github:              "ropwarejb/xmonad"
 license:             BSD3
 author:              "Josh Brown"
 maintainer:          "example@example.com"
@@ -11,7 +11,7 @@ extra-source-files: []
 # To avoid duplicated efforts in documentation and dealing with the
 # complications of embedding Haddock markup inside cabal files, it is
 # common to point users to the README.md file.
-description:         Please see the README on GitHub at <https://github.com/githubuser/ropsast-java#readme>
+description:         Please see the README on GitHub at <https://github.com/ropwarejb/xmonad#readme>
 
 dependencies:
 - base >= 4.7 && < 5
