--- a/stack.yaml
+++ b/stack.yaml
@@ -84,3 +84,11 @@ flags:
 #
 # Allow a newer minor version of GHC than the snapshot specifies
 # compiler-check: newer-minor
+#
+
+nix:
+  enable: true
+  pure: false
+  # See https://docs.haskellstack.org/en/stable/nix_integration/#using-a-custom-shellnix-file
+  shell-file: nix/stack-integration.nix
+
